# pf

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: session-review.md
.github/workflows/: ci.yml
docs/: backlog.md  roadmap.md  sprint-velocity.md
docs/architecture/: c4-diagrams.md  sequence-diagrams.md
docs/specs/: 2026-04-25-full-system-architecture-design.md  evalset-schema-design.md  knowledge-retrieval-strategy.md  orchestrator-routing-design.md  researcher-agent-design.md  router-facilitation-contract.md  session-knowledge-extraction.md  session-metric-dashboard.md
evals/: README.md  conftest.py  test_expert_selection.py
evals/evalsets/: artist-manager.evalset.json  health-coach.evalset.json  overlap.evalset.json  tech-pm.evalset.json
expert-agents/base/: pyproject.toml
expert-agents/dev-coach/: .gitignore  Dockerfile  pyproject.toml  wiki_schema.md
orchestrator/: .gitignore  Dockerfile  pyproject.toml
orchestrator/orchestrator/: agent_registry.py  agents.yaml  health_monitor.py  main.py  routing.py  session_handler.py  turn_handler.py
orchestrator/tests/: test_agent_registry.py  test_health_monitor.py  test_routing.py  test_session_handler.py  test_turn_handler.py
pf/: .gitignore  CLAUDE.md  README.md
pf/tests/: test_setup.py
router-service/: .gitignore  Dockerfile  pyproject.toml
scripts/: dev-logs.sh  fix-plugin-skills.sh  gemini-models.sh  session-dashboard.sh  session-review.sh  stack.sh
src/router/: router.py
voice-router/: .gitignore  CLAUDE.md  Dockerfile
(+54 files in other folders)
